--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
-  "private": true
+  "private": true,
+  "pnpm": {
+    "patchedDependencies": {
+      "expo@49.0.0-alpha.5": "patches/expo@49.0.0-alpha.5.patch"
+    }
+  }
 }
