--- a/app.json
+++ b/app.json
@@ -15,13 +15,15 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.bycedric.pnpmexpo49"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.bycedric.pnpmexpo49"
     },
     "web": {
       "favicon": "./assets/favicon.png"
