--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "expo": "~49.0.0-alpha.5",
     "expo-dev-client": "~2.4.0",
+    "expo-splash-screen": "~0.20.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.0"
@@ -21,7 +22,8 @@
   "private": true,
   "pnpm": {
     "patchedDependencies": {
-      "expo@49.0.0-alpha.5": "patches/expo@49.0.0-alpha.5.patch"
+      "expo@49.0.0-alpha.5": "patches/expo@49.0.0-alpha.5.patch",
+      "expo-modules-autolinking@1.5.0": "patches/expo-modules-autolinking@1.5.0.patch"
     }
   }
 }
