--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,7 @@
       "name": "Expo: start",
       "request": "launch",
       "runtimeExecutable": "pnpm",
-      "runtimeArgs": ["expo", "start"],
+      "runtimeArgs": ["expo", "start", "--dev-client", "--clear"],
       "skipFiles": ["<node_internals>/**"],
       "type": "node"
     }
