--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pnpm-expo-49",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "index.js",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
@@ -17,7 +17,8 @@
     "react-native": "0.72.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/runtime": "^7.20.0"
   },
   "private": true,
   "pnpm": {
