--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.0-alpha.5",
-    "expo-dev-client": "~2.4.0",
-    "expo-splash-screen": "~0.20.0",
+    "expo": "~49.0.6",
+    "expo-dev-client": "~2.4.6",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.0"
+    "react-native": "0.72.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -23,7 +23,7 @@
   "private": true,
   "pnpm": {
     "patchedDependencies": {
-      "expo@49.0.0-alpha.5": "patches/expo@49.0.0-alpha.5.patch",
+      "expo@49.0.6": "patches/expo@49.0.6.patch",
       "expo-modules-autolinking@1.5.0": "patches/expo-modules-autolinking@1.5.0.patch"
     }
   }
